<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/rectangle_box_margin"
            android:layout_marginRight="@dimen/rectangle_box_margin"
            android:background="@drawable/rectangle_round_corners"
            android:drawablePadding="8dp"
            android:gravity="center_vertical|right"
            android:hint="@string/phone_num"
            android:inputType="number"
            android:padding="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/gray_color"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size" />

        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/rectangle_box_margin"
            android:layout_marginRight="@dimen/rectangle_box_margin"
            android:background="@drawable/rectangle_round_corners"
            android:drawablePadding="8dp"
            android:gravity="center_vertical|right"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/gray_color"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size" />

        <!--<Button-->
        <!--android:layout_alignEnd="@id/user_name"-->
        <!--android:id="@+id/forget_password"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/password"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:background="?selectableItemBackground"-->
        <!--android:padding="8dp"-->
        <!--android:text="هل نسيت كلمة المرور ؟ "-->
        <!--android:textColor="@color/gray"-->
        <!--android:textSize="@dimen/text_size"-->
        <!--android:textStyle="bold" />-->

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phone"
            android:layout_alignStart="@+id/phone"
            android:layout_below="@id/password"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_round_primary"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/login"
            android:layout_margin="20dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/phone"
            android:layout_alignStart="@id/phone"
            android:layout_below="@id/view"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="8dp"
                android:text="لا تمتلك حساب ؟ سجل من هنا"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:id="@+id/linear_create_account_customer"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignStart="@id/phone_num"-->
        <!--android:layout_below="@+id/view"-->
        <!--android:layout_gravity="left"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
        <!--android:id="@+id/register"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="?selectableItemBackground"-->
        <!--android:padding="8dp"-->
        <!--android:text="سجل الآن"-->
        <!--android:textSize="@dimen/text_size"-->
        <!--android:textStyle="bold" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->

        <!--android:layout_height="wrap_content"-->
        <!--android:background="?selectableItemBackground"-->
        <!--android:text="لا تمتلك حساب ؟"-->
        <!--android:textSize="@dimen/text_size" />-->


        <!--</LinearLayout>-->


    </RelativeLayout>
</ScrollView>